# Pokemon-CPP

./: CMakeLists.txt  structure.txt  todo.md
include/: Utils.hpp  battler.hpp  move.hpp  screenManager.hpp  type.hpp  utils.hpp
include/screens/: BattleScreen.hpp  BattlerListScreen.hpp  BattlersChooserScreen.hpp  TitleScreen.hpp
src/: Utils.cpp  battler.cpp  main.cpp  utils.cpp
src/api/: ApiMapper.cpp  ApiMapper.hpp  PokeApiClient.cpp  PokeApiClient.hpp
src/db/: Database.hpp  MoveRepository.cpp  MoveRepository.hpp  PokemonRepository.cpp  PokemonRepository.hpp  TypeRepository.cpp  TypeRepository.hpp
src/model/: BattlePokemon.hpp  BattleState.hpp  Battler.cpp  Battler.hpp  GameContext.hpp  Move.hpp  PokemonInstance.hpp  PokemonSpecies.hpp  StatusEffect.hpp  Type.hpp
src/opponent/: AOpponent.cpp  AOpponent.hpp  LocalOpponent.cpp  LocalOpponent.hpp  NetworkOpponent.cpp  NetworkOpponent.hpp  Opponent.hpp
src/screens/: BattleScreen.cpp  BattleScreen.hpp  BattlerListScreen.cpp  BattlerListScreen.hpp  BattlersChooserScreen.cpp  BattlersChooserScreen.hpp  Screen.hpp  ScreenManager.cpp  ScreenManager.hpp  TitleScreen.cpp  TitleScreen.hpp
